force-app/main/default/objects/Forecast_Unit__c/fields/Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region__c</fullName>
    <formula>IF( NOT(OR((AND(Account_ID__c=&quot;00120000004eEZF&quot;,Product_ID__c = &quot;01t20000000EOLh&quot;)),(AND(Account_ID__c=&quot;001D000001Ul998&quot;,Product_ID__c = &quot;01t57000006rAsc&quot;)) )),

IF( ISBLANK(TEXT(End_Customer__r.Reporting_Region__c)), TEXT(Account__r.Reporting_Region__c) , TEXT(End_Customer__r.Reporting_Region__c)) ,

&quot;Corporate&quot;)</formula>
    <label>Reporting Region</label>
    <type>Text</type>
</CustomField>