force-app/main/default/objects/Forecast_Unit__c/fields/Reporting_uB_Office_Copy__c.field-meta.xml
<CustomField>
    <fullName>Reporting_uB_Office_Copy__c</fullName>
    <description>Used for Sharing Rules to grant access to members of &quot;Reporting uB Office&quot; in case the owner is from other uB office.</description>
    <label>Reporting uB Office Copy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>