force-app/main/default/objects/Forecast_Unit__c/fields/Sales_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_3_Months__c</fullName>
    <inlineHelpText>up to 15th: sales and order book of last month, month - 2, month - 3
after 15th: sales and order book of current month, month - 1, month - 2</inlineHelpText>
    <label>Sales Last 3 Months</label>
    <summarizedField>Forecast_Unit_Period__c.Total_Sales_and_Order__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.X3_months_history__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>