force-app/main/default/objects/Forecast_Unit__c/fields/Sales_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_6_Months__c</fullName>
    <inlineHelpText>Sum of sales in the last 6 months, without current month.</inlineHelpText>
    <label>Sales Last 6 Months</label>
    <summarizedField>Forecast_Unit_Period__c.Actual_Sales__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.X6_months_history__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>