force-app/main/default/objects/Forecast_Unit__c/fields/SF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number__c</fullName>
    <description>SF Account Number used for filtering in reports</description>
    <formula>Account__r.SF_Account_Number__c</formula>
    <label>SF Account Number</label>
    <type>Text</type>
</CustomField>