force-app/main/default/objects/Forecast_Unit__c/fields/Supplier_A__c.field-meta.xml
<CustomField>
    <fullName>Supplier_A__c</fullName>
    <description>Main current supplier for this Product (from Abacus)</description>
    <formula>Product__r.Supplier_A__c</formula>
    <inlineHelpText>Main current supplier for this Product (from Abacus)</inlineHelpText>
    <label>Supplier A</label>
    <type>Text</type>
</CustomField>