force-app/main/default/objects/Forecast_Unit__c/fields/This_FY_Open_Orders_Sales__c.field-meta.xml
<CustomField>
    <fullName>This_FY_Open_Orders_Sales__c</fullName>
    <formula>Order_Book_Actual_FP__c *  Actual_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of open orders with delivery date this year.</inlineHelpText>
    <label>This FY Open Orders Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>