force-app/main/default/objects/Forecast_Unit__c/fields/This_FY_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>This_FY_YTD_Sales__c</fullName>
    <inlineHelpText>Value of closed orders year-to-date</inlineHelpText>
    <label>This FY YTD Sales</label>
    <summarizedField>Forecast_Unit_Period__c.Value_Order_Sales__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Budget_Actual_FP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Actual_Sales__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>