force-app/main/default/objects/Forecast_Unit__c/fields/Total_Manual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Manual_Forecast__c</fullName>
    <inlineHelpText>Total number of pieces entered as manual forecast for the current and future months.</inlineHelpText>
    <label>Total Manual Forecast</label>
    <summarizedField>Forecast_Unit_Period__c.Forecast_manual__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Future_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>