force-app/main/default/objects/Forecast_Unit__c/fields/Total_Order_Book__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Book__c</fullName>
    <inlineHelpText>Total number of ordered products in order book.</inlineHelpText>
    <label>Total Order Book</label>
    <summarizedField>Forecast_Unit_Period__c.Order_Book__c</summarizedField>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>