force-app/main/default/objects/Forecast_Unit__c/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <formula>TEXT(Account__r.uB_Office__c)</formula>
    <label>uB Office</label>
    <type>Text</type>
</CustomField>