force-app/main/default/objects/Forecast_Unit__c/fields/Upside_Potential__c.field-meta.xml
<CustomField>
    <fullName>Upside_Potential__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Potential for additional business in optimum case.</inlineHelpText>
    <label>Upside Potential</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>