force-app/main/default/objects/Forecast_Unit__c/fields/X3_months_forward_periods__c.field-meta.xml
<CustomField>
    <fullName>X3_months_forward_periods__c</fullName>
    <inlineHelpText>Sum of Sales &amp; Order Book of last 3 months, excluding current month.</inlineHelpText>
    <label>3 months forward periods</label>
    <summarizedField>Forecast_Unit_Period__c.X3_months_history__c</summarizedField>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>