force-app/main/default/objects/Forecast_Unit__c/validationRules/Check_Upside_potential.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Upside_potential</fullName>
    <active>true</active>
    <description>Value must be between 0 and 400%</description>
    <errorConditionFormula>if(or( Upside_Potential__c &lt; 0, Upside_Potential__c &gt; 4), true, false)</errorConditionFormula>
    <errorDisplayField>Upside_Potential__c</errorDisplayField>
    <errorMessage>Value must be between 0% and 400%</errorMessage>
</ValidationRule>