force-app/main/default/objects/Forecast_Unit__c/listViews/All_flagged_items_Alex_Candela.listView-meta.xml
<ListView>
    <fullName>All_flagged_items_Alex_Candela</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Last_Manual_Update__c</columns>
    <columns>Sales_Last_6_Months__c</columns>
    <columns>Sales_Last_3_Months__c</columns>
    <columns>Total_Order_Book__c</columns>
    <columns>Flagged_item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flagged_item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Channel_Manager__c</field>
        <operation>contains</operation>
        <value>Alex Candela</value>
    </filters>
    <label>All flagged items Alex Candela</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionEMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>