force-app/main/default/objects/Forecast_Unit__c/listViews/All_FUs_APAC.listView-meta.xml
<ListView>
    <fullName>All_FUs_APAC</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Last_Manual_Update__c</columns>
    <columns>Sales_Last_6_Months__c</columns>
    <columns>Sales_Last_3_Months__c</columns>
    <columns>Total_Order_Book__c</columns>
    <columns>Flagged_item__c</columns>
    <columns>Propose_Flag_Removal__c</columns>
    <columns>Channel_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reporting_Region__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <filters>
        <field>Flagged_item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All FUs APAC Flagged</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionAPAC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>