force-app/main/default/objects/Forecast_Unit__c/listViews/All_FUs_SHO.listView-meta.xml
<ListView>
    <fullName>All_FUs_SHO</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Last_Manual_Update__c</columns>
    <columns>Sales_Last_6_Months__c</columns>
    <columns>Sales_Last_3_Months__c</columns>
    <columns>Total_Order_Book__c</columns>
    <columns>Flagged_item__c</columns>
    <columns>Propose_Flag_Removal__c</columns>
    <columns>Channel_Manager__c</columns>
    <columns>Flag_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <label>All FUs SHO</label>
    <sharedTo>
        <group>Marketing</group>
        <role>ubloxHQ</role>
    </sharedTo>
</ListView>