force-app/main/default/objects/Forecast_Unit__c/listViews/EMEA_actual_Sales_Price_zero.listView-meta.xml
<ListView>
    <fullName>EMEA_actual_Sales_Price_zero</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>End_Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Last_Manual_Update__c</columns>
    <columns>Sales_Last_6_Months__c</columns>
    <columns>Sales_Last_3_Months__c</columns>
    <columns>Total_Order_Book__c</columns>
    <columns>Flagged_item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_Sales_Price__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Reporting_Region__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>EMEA actual Sales Price zero</label>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionEMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>