force-app/main/default/objects/Forecast_Unit__c/listViews/isAboveTreshold_with_Project_Owner.listView-meta.xml
<ListView>
    <fullName>isAboveTreshold_with_Project_Owner</fullName>
    <columns>NAME</columns>
    <columns>a4a_Measure_Report_Name_Formula__c</columns>
    <columns>Account__c</columns>
    <columns>End_Customer__c</columns>
    <columns>uB_Office__c</columns>
    <columns>Product__c</columns>
    <columns>Last_Manual_Update__c</columns>
    <columns>Sales_Last_6_Months__c</columns>
    <columns>Sales_Last_3_Months__c</columns>
    <columns>Total_Order_Book__c</columns>
    <columns>Flagged_item__c</columns>
    <columns>Budget_Next_FPeriod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>a4a_isAboveTreshold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>isAboveTreshold with Project Owner</label>
    <sharedTo></sharedTo>
</ListView>